Support fetching the list of datasets
